Fix issue with non-touchpad scrolling event over resizer: should not cause an area resize.

BUG=632930

Review-Url: https://codereview.chromium.org/2340533003
Cr-Commit-Position: refs/heads/master@{#419217}

Former-commit-id: 28d25ce85ea355af02e766225fb6f8d79a5ed374